# LIFT-MultiLabel-Learning-with-Label-Specific-Features

./: .gitignore  LIFT(1).ipynb  README.md  example.py  pyproject.toml  requirements.txt
lift_ml/: README.md  pyproject.toml  requirements.txt  setup.py
lift_ml/lift_ml/: __init__.py  cli.py  cli_predict.py  cli_threshold_report.py  cli_train.py  lift.py
other experiments/: LIFT SMOTE.ipynb  LIFT(1).ipynb  lift.ipynb
src/: lift.py  lift_autohpo.py  lift_sklearn.py  lift_sklearn_compatible.py  lift_sklearn_pipeline.py
src/lift_ml/: __init__.py  classifier.py  cli.py  transformer.py
src/lift_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_lift_transformer.py
