[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "lift-ml"
version = "0.1.0"
description = "LIFT multi-label classifier with Bayesian hyperparameter optimization"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "scikit-learn>=1.0",
    "numpy>=1.20",
    "scikit-optimize>=0.9.0"
]
requires-python = ">=3.7"